--- a/test.html
+++ b/test.html
@@ -7,13 +7,17 @@
   </div>
   <script src="http://localhost:8080/markdown-parser.js"></script>
   <script>
-    const parse = MarkdownParser.default;
+    const {
+      parse,
+      render,
+    } = MarkdownParser;
     const inputElement = document.getElementById('input');
     const resultElement = document.getElementById('result');
     inputElement.addEventListener('input', () => {
       const value = inputElement.value;
       const parsed = parse(value);
       console.log(parsed);
+      console.log(render(value));
       resultElement.innerHTML = JSON.stringify(parsed, null, 2);
     });
   </script>
